[package]
name = "handler"
version = "0.1.0"
authors = ["Eugene Gavrilov <me@huncode.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.1"
futures = { version = "0.3", features = ["compat"] }
reqwest = { version = "0.10.1", features = ["stream"] }
url = "2.1.1"
tokio = { version = "0.2.10", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1.3.2"
bytes = "0.5.3"
